MASTER|Implementacion paginas tiendas y compras

--- a/TrendBeauty/Views/Acceso/Reestablecer.cshtml
+++ b/TrendBeauty/Views/Acceso/Reestablecer.cshtml
@@ -11,14 +11,14 @@
     <title>Reestablecer</title>
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
-<body class="bg-primary">
+<body>
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <main>
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="text-center" style="padding: 2px">
-                            <h1 class="text-white text-center">Gestión Peluqueria 'Amparo'</h1>
+                            <h1 class="text-white text-center">TrendBeauty</h1>
                             <img src="~/img/peluqueria1.png" width="100" style="padding: 15px; " />
                         </div>
                         <hr />
