--- a/TrendBeauty/Views/Mantenedor/Productos.cshtml
+++ b/TrendBeauty/Views/Mantenedor/Productos.cshtml
@@ -54,6 +54,14 @@
                 <input id="txtIdUsuario" type="hidden" />
 
                 <form id="Contenedor" class="row">
+                    <div class="col-sm-12">
+                        <div class="mb-2">
+                            <img id="ImgProducto" height="197" width="200" class="border rounded mx-auto d-block img-fluid" />
+                        </div>
+                        <div class="mb-2">
+                            <input class="form-control" type="file" id="fileProducto" accept="image/png, image/jpg, image/jpeg" onchange="mostrarImagen(this)" />
+                        </div>
+                    </div>
 
                     <div class="col-sm-6">
                         <label for="txtNombre" class="form-label">Nombre</label>
@@ -115,21 +123,33 @@
 
     <script>
 
-        var tabladata; //almacenar el data table
+        var tabladata;
         var filaSeleccionada;
 
         $(document).ready(function () {
 
-            //mostrar calendario en el input
             $("#txtFecha").datepicker({ dateFormat: 'dd/mm/yy' }).datepicker('setDate', new Date());
 
         });
+
+        function mostrarImagen(input) {
+            if (input.files) {
+
+                var reader = new FileReader(); //lee archivos
+
+                reader.onload = function (e) { // en el evento oonload se le carga una nueva funcion
+                    $("#ImgProducto").attr("src", e.target.result).width(200).height(197)
+                }
+
+                reader.readAsDataURL(input.files[0]) //primer archivo seleccionado
+            }
+        }
 
         tabladata = $("#tabla").DataTable({
             responsive: true,
             ordering: false,
             "ajax": {
-                url: '@Url.Action("ListarProductos", "Mantenedor")',//url para hacer el llamado a una accion
+                url: '@Url.Action("ListarProductos", "Mantenedor")',
                 type: "GET",
                 dataType: "json",
             },
@@ -137,9 +157,6 @@
                 { "data": "Nombre" },
                 { "data": "Descripcion" },
                 { "data": "Costo" },
-                //{
-                //    "data": "Stock"
-                //},
                 { "data": "FechaCompra" },
                 {
                     "data": "oCategoria", "render": function (data) {
@@ -171,28 +188,28 @@
             "language": {
                 "url": "https://cdn.datatables.net/plug-ins/1.12.1/i18n/es-ES.json"
             }
-        }); //convierte la tabla en un datatable
+        });
 
         jQuery.ajax({
-            url: '@Url.Action("ListarCategorias", "Mantenedor")',//url para hacer el llamado a una accion
+            url: '@Url.Action("ListarCategorias", "Mantenedor")',
             type: "GET",
             data: null,
             dataType: "json",
             contentType: "application/json; charset=utf-8",
             success: function (data) {
 
-                $("<option>").attr({ "value": "0", "disable": "true" }).text("Seleccionar").appendTo("#cboCategoria"); //valor por defecto
+                $("<option>").attr({ "value": "0", "disable": "true" }).text("Seleccionar").appendTo("#cboCategoria");
 
-                $.each(data.data, function (index, item) { //index es el numero de registros que existen en la lista, y item: valor de cada uno de los elementos.
-                    $("<option>").attr({ "value": item.IdCategoria }).text(item.Nombre).appendTo("#cboCategoria"); //option la etiqueta del select; appendTo: 'asignar a' -> al select cbomarca
-                }) //recorrer toda la lista de marcas; iterar una lista; el primer data(hace referencia a este function (data) y el otro data (hace referencia al data del metodo del controlador data = oLista )
+                $.each(data.data, function (index, item) {
+                    $("<option>").attr({ "value": item.IdCategoria }).text(item.Nombre).appendTo("#cboCategoria");
+                })
             },
             error: function (error) {
                 console.log(error)
             }
         });
 
-        function abrirModal(json) {//recibe un objecto de tipo json
+        function abrirModal(json) {
 
             $("#txtId").val(0);
             $("#txtIdUsuario").val("@Session["IdUsuario"]");
@@ -221,53 +238,46 @@
                 $("#txtFecha").val(json.FechaCompra);
                 $("#txtStock").val(json.Stock);
 
+
+                jQuery.ajax({
+                        url: '@Url.Action("ImagenProducto", "Mantenedor")',//url para hacer el llamado a una accion
+                        type: "POST",
+                        data: JSON.stringify({ id: json.IdProducto }),
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                         success: function (data) {
+
+                             $("#ImgProducto").LoadingOverlay("hide");
+
+                             if (data.conversion) {
+                                 $("#ImgProducto").attr({ "src": "data:image/" + data.extension + ";base64," + data.textobase64 });
+                             }
+                         },
+                         error: function (error) {
+                             $("#ImgProducto").LoadingOverlay("hide");
+
+                             $("#mensajeError").show();
+                             $("#mensajeError").text("Error al Mostrar Imagen");
+                        },
+                        beforeSend: function () {
+                            $("#ImgProducto").LoadingOverlay("show");
+                        },
+                    })
             }
             $("#FormModal").modal("show")
         }
-
-        //declaracion de un formato; expresiones regulaares en javascript son patrones que se utilizan para hacer coincidor combinaciones de letras o numeros en cadenas
 
         jQuery.validator.addMethod("preciodecimal", function (value, element) {
             return this.optional(element) || /^\d{0,4}(\.\d{0,2})?$/i.test(value);
         }, "El formato correcto del precio es ##.##");
 
-        //validacion de los campos que se requieren para crear o editar un producto
-        //usamos el form que tiene id 'Contenedor' y la propiedad 'name' de cada input es la que usamos para validar que los campos sean requeridos
-        //$("#Contenedor").validate({
-        //    rules: {
-        //        nombre: {
-        //            required: true
-        //        },
-        //        Descripcion: {
-        //            required: true
-        //        },
-        //        Costo: {
-        //            required: true,
-        //            preciodecimal: true
-        //        },
-        //        Stock: {
-        //            required: true,
-        //            number: true
-        //        }
-        //    },
-        //    //mensaje que debe aparecer si no se cumplen las reglas
-        //    messages: {
-        //        nombre: "- El campo Nombre es Obligatorio",
-        //        Descripcion: "- El campo Descripcion es Obligatorio",
-        //        Precio: { required: "- El campo Precio es Obligatorio", preciodecimal: "- El formato correcto del precio es ##.##" },
-        //        Stock: { required: "- El campo Stock es Obligatorio", preciodecimal: "- Debe Ingresar Solo Numeros en el Stock" }
-        //    },
-        //    //Donde se van a mostrar los mensajes
-        //    errorElement: "div",
-        //    errorLabelContainer: ".alert-danger"
-        //});
 
         function Guardar() {
 
-            //llamamos el metodo de las validaciones que hicimos mas arriba
-            if (!$("#Contenedor").valid()) { //si no se cumplieron las reglas hasta allí queda y no va a continuar guardando el producto
+            if (!$("#Contenedor").valid()) {
                 return;
             }
+            var ImagenSeleccionada = $("#fileProducto")[0].files[0];
 
             var Producto = {
                 IdProducto: $("#txtId").val(),
@@ -275,35 +285,36 @@
                 Descripcion: $("#txtDescripcion").val(),
                 Costo: $("#txtCosto").val(),
                 oCategoria: {
-                    IdCategoria: $("#cboCategoria option:selected").val(), //obtenemos el option que este seleccionado
+                    IdCategoria: $("#cboCategoria option:selected").val(),
                     Nombre: $("#cboCategoria option:selected").text()
                 },
-                Activo: $("#cboActivo").val() == 1 ?true: false, // val sirve para obtener un valor y asignar ese valor
+                Activo: $("#cboActivo").val() == 1 ?true: false,
                 Observaciones: $("#txtObservaciones").val(),
                 FechaCompra: $("#txtFecha").val(),
                 Stock: $("#txtStock").val(),
                 IdUsuario: $("#txtIdUsuario").val()
             }
 
+            var request = new FormData();
+            request.append("objeto", JSON.stringify(Producto))
+            request.append("archivoImagen", ImagenSeleccionada)
+
              jQuery.ajax({
-                url: '@Url.Action("GuardarProducto", "Mantenedor")',//url para hacer el llamado a una accion
-                type: "POST", //el tipo
-                data: JSON.stringify({ oProducto: Producto }), //stringify: convierte el json a texto //el objeto que se va a enviar; el nombre del objeto debe ser el mismo declarado en el controlador (oUsuario)
-                dataType: "json",
-                contentType: "application/json; charset=utf-8",
-                //Metodos de ajax; success uando todo es exitoso, error cuando no lo fue y beforeSend: acciones que se van a ejecutar antes y durante la ejecucion del metodo guardar
+                url: '@Url.Action("GuardarProducto", "Mantenedor")',
+                type: "POST",
+                 data: request,
+                 processData: false,
+                 contentType: false,
+
                 success: function (data) {
-                     //data (puede ser cualquier nombre, generalmente se pone data),  data es todo el json que se creo en el controlador (Json(new { resultado = Resultado, mensaje = Mensaje})
 
-                    $(".modal-body").LoadingOverlay("hide"); //para que se oculte el 'cargando..'
-
-                    //USUARIO NUEVO
+                    $(".modal-body").LoadingOverlay("hide");
                     if (Producto.IdProducto == 0) {
 
-                        if (data.Resultado != 0) { //Cuando se ha creado el Producto, el metodo registrar nos devuelve el id del cliente creado; ese valor se almacena en resultado
+                        if (data.Resultado != 0) {
                             Producto.IdProducto = data.Resultado;
-                            tabladata.row.add(Producto).draw(false); //pinta el nuevo Producto en la tabla
-                            $("#FormModal").modal("hide"); //ocultamos el modal
+                            tabladata.row.add(Producto).draw(false);
+                            $("#FormModal").modal("hide");
                         }
                         else {
                             $("#mensajeError").text(data.Mensaje);
@@ -314,7 +325,6 @@
 
                         if (data.Resultado) {
 
-                            //USUARIO EDITAR
                             tabladata.row(filaSeleccionada).data(Producto).draw(false);
                             filaSeleccionada = null;
                             $("#FormModal").modal("hide");
@@ -329,12 +339,12 @@
                  },
                  error: function (data) {
 
-                     $(".modal-body").LoadingOverlay("hide"); //para que se oculte el 'cargando..'
+                     $(".modal-body").LoadingOverlay("hide");
                      $("#mensajeError").text("Error Ajax");
                      $("#mensajeError").show();
                  },
                  beforeSend: function () {
-                     $(".modal-body").LoadingOverlay("show", { //libreria LoadingOverlay es la que permite mostrar que algo esta cargando
+                     $(".modal-body").LoadingOverlay("show", {
                          imageResizeFactor: 2,
                          text: "Cargando...",
                          size: 14
@@ -343,20 +353,21 @@
              })
         }
 
-        //BOTON PARA EDITAR
         $("#tabla tbody").on("click", '.btn-editar', function () {
-            filaSeleccionada = $(this).closest("tr") //obtener la fila que ha sido seleccionada
-            var data = tabladata.row(filaSeleccionada).data() //Obtenemos la informacion de la fila
-            abrirModal(data) //el metodo abrir modal esta recibiendo los datos de la fila seleccionada
-        }) //cada que se haga click en el boton con la clase 'btn-editar' hará una funcion
+            if ($(this).closest('tr').hasClass('child')) {
+                filaSeleccionada = $(this).closest('tr').prev();
+            } else {
+                filaSeleccionada = $(this).closest('tr');
+            }
+            var data = tabladata.row(filaSeleccionada).data();
+            abrirModal(data);
 
-        //BOTON PARA ELIMINAR
+        })
+
         $("#tabla tbody").on("click", '.btn-eliminar', function () {
-            productoSeleccionado = $(this).closest("tr") //obtener la fila que ha sido seleccionada
-            var data = tabladata.row(productoSeleccionado).data() //Obtenemos la informacion de la fila
-            /*console.log(tabladata.row(usuarioSeleccionado).data())*/
+            productoSeleccionado = $(this).closest("tr")
+            var data = tabladata.row(productoSeleccionado).data()
 
-            //la alerta, el mensaje de eliminar
             swal({
                 title: "Eliminar",
                 text: "Desea Eliminar El Producto?",
@@ -370,7 +381,7 @@
                 function () {
 
                      jQuery.ajax({
-                        url: '@Url.Action("EliminarProducto", "Mantenedor")',//url para hacer el llamado a una accion
+                        url: '@Url.Action("EliminarProducto", "Mantenedor")',
                          type: "POST",
                          data: JSON.stringify({ id: data.IdProducto }),
                         dataType: "json",
@@ -390,6 +401,6 @@
                          }
                     })
              });
-        }) //cada que se haga click en el boton con la clase 'btn-eliminar' hará una funcion
+        })
     </script>
 }
