--- a/TrendBeauty/Views/Shared/_Layout.cshtml
+++ b/TrendBeauty/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts1" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="@Url.Action("Index","Negocio")">
+                                    <a class="nav-link" href="@Url.Action("TiendasFisicas","Negocio")">
                                         <div class="sb-nav-link-icon"><i class="bi bi-house"></i></div>Cali
                                     </a>
                                 </nav>
