MASTER|Ajustes Footer

--- a/TrendBeauty/Views/Acceso/CambiarClave.cshtml
+++ b/TrendBeauty/Views/Acceso/CambiarClave.cshtml
@@ -84,9 +84,7 @@
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">Copyright &copy; Your Website 2022</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <p>Trend Beauty</p>
                         </div>
                     </div>
                 </div>
