--- a/TrendBeauty/Views/LandingPage/Index.cshtml
+++ b/TrendBeauty/Views/LandingPage/Index.cshtml
@@ -198,7 +198,7 @@
         </div>
         <footer class="container">
             <p class="float-end"><a href="#">Subir</a></p>
-            <p>&copy; 2025–2025 TrendBeauty, Inc. &middot;  &middot; <a href="#">Métodos de pago</a> &middot; <a href="#">Preguntas frecuentes (FAQ)</a></p>
+            <p>TrendBeauty <a href="#">Métodos de pago</a> &middot; <a href="#">Preguntas frecuentes (FAQ)</a></p>
             <div class="social-media">
                 <a>Nuestras redes sociales:</a>
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
