--- a/TrendBeauty/Views/Shared/_Layout.cshtml
+++ b/TrendBeauty/Views/Shared/_Layout.cshtml
@@ -109,12 +109,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright TrendBeauty SAS &copy; Cali,Colombia </div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a id="Fecha" href="#">@DateTime.Now.ToString("yyyy/MM/dd")</a>
-                        </div>
+                        <div class="text-muted">TrendBeauty</div>
                     </div>
                 </div>
             </footer>
