TrendBeauty|Ajustes varios

--- a/TrendBeauty/Views/LandingPage/Index.cshtml
+++ b/TrendBeauty/Views/LandingPage/Index.cshtml
@@ -123,20 +123,20 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="~/img/Aceite.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Aceite de Argán"/>
+                    <img src="@Url.Content("~/img/Aceite.jpg")" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Aceite de Argán"/>
                     <h2>Aceite de Argan</h2>
                     <p>Nuestro aceite capilar nutre, repara y fortalece tu cabello desde la raíz hasta las puntas. Su fórmula ligera aporta brillo, suavidad y protección contra el daño diario.</p>
                     <p><a class="btn btn-secondary" href="#">Ver Detalles &raquo;</a></p>
                 </div>
                 <div class="col-lg-4">
-                    <img src="~/img/Pestañina.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Pestañina" />
+                    <img src="@Url.Content("~/img/Pestañina.jpg")" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Pestañina" />
 
                     <h2>Pestañina</h2>
                     <p> Consigue unas pestañas impactantes con nuestra máscara de alta definición y volumen extremo. Fórmula de larga duración y resistente al agua para una mirada deslumbrante</p>
                     <p><a class="btn btn-secondary" href="#">Ver Detalles &raquo;</a></p>
                 </div>
                 <div class="col-lg-4">
-                    <img src="~/img/Desmaqui.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Desmaquillante" />
+                    <img src="@Url.Content("~/img/Desmaqui.jpg")" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Desmaquillante" />
 
                     <h2>Desmaquillante</h2>
                     <p>Remueve el maquillaje sin esfuerzo con nuestro desmaquillante suave y eficaz. Enriquecido con ingredientes nutritivos para dejar tu piel fresca, hidratada y radiante.</p>
@@ -148,7 +148,7 @@
 
             <div class="row featurette" id="idNosotros">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading">TrendBeauty. <span class="text-muted">Más de 10 años de Experiencia en el sector.</span></h2>
+                    <h2 class="featurette-heading">TrendBeauty <span class="text-muted">Más de 10 años de Experiencia en el sector</span></h2>
                     <p class="lead">Somos una empresa comprometida con la excelencia y la innovación, dedicada a ofrecer productos y servicios de alta calidad en el sector de la belleza y el estilismo. Nuestro equipo de profesionales altamente capacitados trabaja con pasión para brindar experiencias únicas a nuestros clientes, garantizando satisfacción y confianza en cada servicio. Nos esforzamos por estar a la vanguardia de las tendencias, utilizando tecnologías y técnicas de última generación para proporcionar soluciones adaptadas a las necesidades de cada persona. ¡Descubre con nosotros el equilibrio perfecto entre estilo, bienestar y profesionalismo!</p>
                 </div>
                 <div class="col-md-5">
@@ -160,7 +160,7 @@
 
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading">Nuestros clientes <span class="text-muted">opinan.</span></h2>
+                    <h2 class="featurette-heading">Nuestros clientes <span class="text-muted">opinan</span></h2>
                     <p class="lead">"Desde que descubrí este salón, no confío mi cabello a nadie más. Los estilistas son profesionales y siempre entienden exactamente lo que quiero. ¡Lo recomiendo totalmente! – Evelin M."</p>
                     <p class="lead">"El servicio es impecable y el ambiente súper acogedor. Me hicieron un cambio de look increíble y recibí muchos cumplidos. Sin duda, volveré pronto. – Diego G."</p>
                     <p class="lead">"Desde que uso los productos de TrendBeauty, mi cabello se siente más fuerte y saludable. El tratamiento de keratina es increíble, deja mi pelo sedoso y sin frizz por semanas.– Ana R."</p>
